<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEECDE">

    <ImageView
        android:id="@+id/notifBellImageView"
        android:layout_width="69dp"
        android:layout_height="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notifbell" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100sp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="165dp"
        android:src="@drawable/pfp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/deleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/editProfilePictureButton"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Edit Profile Picture"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:hint="Phone Number"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editEmailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePictureButton" />

    <EditText
        android:id="@+id/editEmailText"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:hint="Email"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePictureButton" />

    <EditText
        android:id="@+id/editAttendeeName"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:hint="Name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePictureButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="Cancel"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/geolocationTrackSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:text="Geolocation Tracking "
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:text="Notification Preference"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailText" />

</androidx.constraintlayout.widget.ConstraintLayout>
