<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/attendeeHome"
    android:background="#EEECDE">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100sp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/pfp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/editPosterText"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Attendee"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/viewMyEventsButton"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:text="View My Events"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/browseEventsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPosterText" />

    <Button
        android:id="@+id/openCamera"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:backgroundTint="#9A8FBF"
        android:text="Scan QR"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPosterText"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/browseEventsButton"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:text="Browse Events"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPosterText" />

</androidx.constraintlayout.widget.ConstraintLayout>
