...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#00FFFFFF"
        android:text="Withdraw"
        android:textColor="@color/red"
...
